# data-science-south

./: .envrc  .gitignore  Makefile  README.md  hugo.toml  pyproject.toml
.claude/commands/: convert-adg-post.md  write-library-post.md  write-project-blog-post.md
assets/css/: main.css
content/: _index.md  about.md
content/blog/: 11-tips-11-months-learning-python.md  ambient-temperature-impact-on-gas-turbine-performance.md  attention-from-scratch.md  cheat-sheet-gas-engine-gas-turbine-chp.md  customizing-jupyter-lab-shortcuts.md  data-science-project-checklist.md  defaultdict.md  dqn-debugging.md  dqn-solving.md  dqn-tuning.md  elexon-api-uk-electricity-grid-data-with-python.md  energy-py-linear.md  energy-py.md  getting-the-most-jupyter-lab.md  git-best-practices.md  guide-deep-learning.md  hackers-aemo.md  hhv-versus-lhv.md  hypermodern-data-science.md  hypermodern-python-2023.md  hypermodern-python-2025.md  hypermodern-terminal.md  jevons-paradox.md  kw-vs-kwh.md  make.md  measuring-forecast-accuracy-linear-programming.md  openai-functions.md  python-function-signature-contracts.md  python-function-signatures.md  q-m-cp-dt.md  tf2-lstm-hidden.md  typical-year-forecasting-electricity-prices.md  vim-neovim-dvorak-split-keyboard.md  what-is-the-uk-imbalance-price.md  world-models.md
content/lessons/: anomaly-detection.md  attention-from-scratch.md  bash-shell.md  bash.md  career-materials.md  choose-a-data-career.md  ci-cd.md  find-a-data-job.md  first.md  git.md  (+9 more)
layouts/: 404.html  index.html
static/: _redirects
tests/: conftest.py  test_navigation.py
(+24 files in other folders)
